[gd_scene load_steps=3 format=2]

[ext_resource path="res://Creatures/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Creatures/Enemies/ProjectileEnemy.gd" type="Script" id=2]

[node name="ProjectileEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

[node name="FireCheckRayCast2D" type="RayCast2D" parent="." index="9"]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 6

[node name="FireCheckRayCast2D2" type="RayCast2D" parent="." index="10"]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 6

[node name="FireCheckRayCast2D3" type="RayCast2D" parent="." index="11"]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 6

[node name="ProjectileRechargeTimer" type="Timer" parent="." index="12"]

[node name="ProjectileSpawnPosition2D" type="Position2D" parent="." index="14"]

[node name="TargetAimPosition2D" type="Position2D" parent="." index="15"]

[editable path="DetectionArea"]
[editable path="HitBox"]
[editable path="HurtBox"]
[editable path="SoftCollisionBox"]
